# banksaction

./: .gitignore  main.ipynb  pyproject.toml
aed-lgb/: ae.py  data_generator.py  feature.py  inference_service.py  inference_service_clasifier.py  inference_service_embedder.py  main.py  test.ipynb  transformer.py
aed-lgb/saved_models/: autoencoder.pth  label_encoders.joblib  lightgbm_model.txt  model_metadata.json  scaler.joblib
aed-lgb/saved_models_transformer/: label_encoders.joblib  lightgbm_model.txt  model_metadata.json  scaler.joblib  transformer_ae.pth
data_gen/: generate_dataset.py  main2.ipynb
models/: model.pth
new_jan/: inference_service.py
nn/: dataloader.py  model.py  nn.ipynb  utils.py
system/: docker-compose.yaml  init.sql  test_transaction.py  transaction_spammer.py
system/dbhandler/: Dockerfile  go.mod  go.sum  init.sql  main.go
system/dbhandler/server/: api_generated.md  server.go
system/graphNN/: graphNnService.py  model.py  nats_subscriber.py  utils.py
